# AvengementFork

./: AI_IMPLEMENTATION_SUMMARY.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  README_AI.md  START_HERE.md  WELCOME.txt  game.html  index.html
ai-backend/: AI_SETUP.md  INDEX.md  QUICK_START.md  VERIFICATION_CHECKLIST.md  model_manager.py  ollamaServer.js  package-lock.json  package.json  start-backend.bat  start-backend.ps1
my-pygame-project/: README.md  pyproject.toml  requirements.txt
my-pygame-project/src/: game.py
my-pygame-project/src/entities/: enemy.py  player.py
my-pygame-project/src/scenes/: menu.py  play.py
my-pygame-project/src/utils/: helpers.py
my-pygame-project/tests/: test_game.py
scripts/: main.js
scripts/game/: aiOpponent.js  app.js  boardState.js  boardStateAnalyzer.js  champion.js  gameManager.js  utils.js
scripts/game/champions/: bossDragon.js  fighter.js  ranger.js
scripts/ui/: boardUI.js  help.js  menu.js  settings.js
styles/: main.css
