[tool]
name = "my-pygame-project"
version = "0.1.0"
description = "A Pygame project for creating a fun game."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"